--- a/demos/style/igniteui-theme.scss
+++ b/demos/style/igniteui-theme.scss
@@ -1,37 +1,40 @@
 @import '../lib/core/styles/themes/index';
 
 $exclude: (
-    igx-avatar,
-    igx-badge,
-    igx-button,
-    igx-button-group,
-    igx-calendar,
-    igx-card,
-    igx-carousel,
-    igx-checkbox,
-    igx-date-picker,
-    igx-dialog,
-    igx-grid,
-    igx-filtering,
-    igx-icon,
-    igx-form-group,
-    igx-list,
-    igx-navbar,
-    igx-nav-drawer,
-    igx-paginator,
-    progress-linear,
-    progress-circular,
-    igx-radio,
-    ig-ripple-host,
-    igx-slider,
-    igx-snackbar,
-    igx-switch,
-    igx-tab-bar,
-    igx-toast
+    // igx-avatar,
+    // igx-badge,
+    // igx-button,
+    // igx-button-group,
+    // igx-calendar,
+    // igx-card,
+    // igx-carousel,
+    // igx-checkbox,
+    // igx-date-picker,
+    // igx-dialog,
+    // igx-grid,
+    // igx-filtering,
+    // igx-icon,
+    // igx-form-group,
+    igx-input-group,
+    // igx-list,
+    // igx-navbar,
+    // igx-nav-drawer,
+    // igx-paginator,
+    // progress-linear,
+    // progress-circular,
+    // igx-radio,
+    // igx-ripple,
+    // igx-slider,
+    // igx-snackbar,
+    // igx-switch,
+    // igx-tab-bar,
+    // igx-toast
 );
 // Generating a palette
 @include igx-core();
-@include igx-theme($default-palette);
+@include igx-theme($default-palette, $exclude);
+
+@include igx-input-group((variant: 'dark'));
 
 // @mixin gen-color-class($name, $variant, $prefix, $suffix) {
 //     $prefix: if($prefix, '#{$prefix}-', '');
