Adding rudimentary rendering support.

--- a/demos/app/grid-groupby/sample.component.html
+++ b/demos/app/grid-groupby/sample.component.html
@@ -6,6 +6,6 @@
     </igx-grid>
     <br />
     <button igxButton="raised" (click)="groupBy('City')">Group/Ungroup 'City'</button>
-    <button igxButton="raised" (click)="groupBy('Region')">Group/Ungroup 'Region'</button>
+    <button igxButton="raised" (click)="groupBy('ContactTitle')">Group/Ungroup 'Region'</button>
 
 </div>
