--- a/src/core/styles/components/grid-summary/_grid-summary-component.scss
+++ b/src/core/styles/components/grid-summary/_grid-summary-component.scss
@@ -10,58 +10,31 @@
     @include register-component(str-slice($this, 2, -1));
 
     @extend %igx-grid-summary !optional;
-}
 
-@include b(igx-grid-summary-wrapper) {
-    @extend %igx-grid-summary-wrapper !optional;
-
-    &:first-of-type {
-        &::before {
-            border-left: none
-        }
+    @include e(item) {
+        @extend %igx-grid-summary__item !optional;
     }
 
-    &:last-of-type {
-        &::after {
-            border-right: none
-        }
+    @include e(item, $m: inactive) {
+        @extend %igx-grid-summary__item !optional;
+        @extend %igx-grid-summary__item--inactive !optional;
     }
-}
-
-.igx-grid-summary-wrapper:empty + .igx-grid-summary-wrapper .igx-grid-summary-item {
-    @extend %separator !optional;
-}
-
-.igx-grid-summary-wrapper + .igx-grid-summary-wrapper .igx-grid-summary-item {
-    @extend %separator-right !optional;
-}
-
-@include b(igx-grid-summary-item) {
-
-    @extend %igx-grid-summary-item !optional;
 
     @include e(label) {
-        @extend %igx-grid-summary-item__label !optional;
+        @extend %igx-grid-summary__label !optional;
     }
 
     @include e(result) {
-        @extend %igx-grid-summary-item__result !optional;
+        @extend %igx-grid-summary__result !optional;
     }
 
-    @include e(result, $m: left-align) {
-        @extend %igx-grid-summary-item__result--left-align !optional;
+    @include m(pinned) {
+        @extend %igx-grid-summary !optional;
+        @extend %igx-grid-summary--pinned !optional;
     }
 
-    @include m(inactive) {
-        @extend %igx-grid-summary-item__label !optional;
-
-        @include e(label) {
-            @extend %igx-grid-summary__label--inactive !optional;
-        }
-
-        @include e(result) {
-            @extend %igx-grid-summary__result--inactive !optional;
-        }
+    @include m(empty) {
+        @extend %igx-grid-summary !optional;
+        @extend %igx-grid-summary--empty !optional;
     }
 }
-
