--- a/src/grid/grid-summary.component.html
+++ b/src/grid/grid-summary.component.html
@@ -1,8 +1,8 @@
 <ng-container *ngIf="column.hasSummary">
     <ng-container *ngFor="let summary of resolveSummaries">
         <div class="{{summaryClass(summary.key)}}">
-            <span class="igx-grid-summary-item__label" title="{{ summary.label }}" (click)="changeSummaryClass(summary.key)">{{ summary.label }} </span>
-            <span class="igx-grid-summary-item__result {{summaryValueClass(summary.summaryResult)}}" title="{{ summary.summaryResult }}">{{ summary.summaryResult }}</span>
+            <span class="igx-grid-summary__label" title="{{ summary.label }}" (click)="changeSummaryClass(summary.key)">{{ summary.label }} </span>
+            <span class="igx-grid-summary__result {{summaryValueClass(summary.summaryResult)}}" title="{{ summary.summaryResult }}">{{ summary.summaryResult }}</span>
         </div>
     </ng-container>
 </ng-container>
