feat(igxGridGroupBy) adding expand/collapse functionality

--- a/src/grid/grid.component.html
+++ b/src/grid/grid.component.html
@@ -34,7 +34,7 @@
 <div class="igx-grid__tbody" role="rowgroup" [style.height.px]='calcHeight' [style.width.px]='calcWidth'>
     <ng-template igxFor let-rowData [igxForOf]="data | gridFiltering:filteringExpressions:filteringLogic:id:pipeTrigger
                             | gridSort:sortingExpressions:id:pipeTrigger
-                            | gridGroupBy:groupingExpressions:id:pipeTrigger
+                            | gridGroupBy:groupingExpressions:groupingExpansionState:groupByDefaultExpanded:id:pipeTrigger
                             | gridPaging:page:perPage:id:pipeTrigger" let-rowIndex="index" [igxForScrollOrientation]="'vertical'"
         [igxForContainerSize]='calcHeight' [igxForItemSize]="rowHeight" #verticalScrollContainer>
         <ng-container *ngIf="rowData.records && rowData.records.length > 0">
