--- a/src/core/styles/components/grid/_grid-theme.scss
+++ b/src/core/styles/components/grid/_grid-theme.scss
@@ -141,7 +141,38 @@
     }
 
     %vhelper-display {
+        &::-webkit-scrollbar {
+            width: 18px;
+            height: 18px;
+        }
 
+        &::-webkit-scrollbar-track {
+            background: rgba(text-contrast(map-get($this, 'content-background')), .12);
+
+            /* stylelint-disable selector-pseudo-class-no-unknown */
+            &:vertical {
+                border-left: 1px solid rgba(text-contrast(map-get($this, 'content-background')), .08);
+                border-right: 1px solid rgba(text-contrast(map-get($this, 'content-background')), .08);
+            }
+
+            &:horizontal {
+                border-top: 1px solid rgba(text-contrast(map-get($this, 'content-background')), .08);
+                border-bottom: 1px solid rgba(text-contrast(map-get($this, 'content-background')), .08);
+            }
+            /* stylelint-enable */
+        }
+
+        &::-webkit-scrollbar-thumb {
+            background: rgba(text-contrast(map-get($this, 'content-background')), .24);
+
+            &:hover {
+                background: rgba(text-contrast(map-get($this, 'content-background')), .37);
+            }
+        }
+
+        &::-webkit-scrollbar-corner {
+            background: map-get($this, 'content-background');
+        }
     }
 
     %grid-caption {
