Fix pressing arrow down in keyboard navigaton not selecting cell bellow when there is not vertical virtualization.

--- a/src/core/styles/components/_common/_igx-vhelper.scss
+++ b/src/core/styles/components/_common/_igx-vhelper.scss
@@ -7,7 +7,7 @@
     width: 18px;
     height: calc(100% + 18px) !important;
     position: absolute;
-    right: 0px;
+    right: 0;
     z-index: 10;
 }
 
