paginator move out of tfoot

--- a/src/grid/grid.component.html
+++ b/src/grid/grid.component.html
@@ -1,5 +1,5 @@
 <ng-template #defaultPager let-api>
-    <div *ngIf="api.paging && api.totalPages > 0" class="igx-paginator">
+    <ng-container *ngIf="api.paging && api.totalPages > 0">
         <button [disabled]="api.isFirstPage" (click)="api.paginate(0)" igxButton="icon" igxRipple igxRippleCentered="true">
             <igx-icon fontSet="material" name="first_page"></igx-icon>
         </button>
@@ -16,7 +16,7 @@
         <select style="margin-left: 1rem;" (change)="api.perPage = $event.target.value">
             <option [value]="val" [selected]="api.perPage == val" *ngFor="let val of [5, 10, 15, 25, 50, 100, 500]">{{ val }}</option>
         </select>
-    </div>
+    </ng-container>
 </ng-template>
 
 <div class="igx-grid__thead" role="rowgroup" [style.width.px]='calcWidth'>
@@ -56,7 +56,7 @@
 </div> -->
 
 <div class="igx-grid__tfoot" role="rowgroup" [style.width.px]='calcWidth' #tfoot>
-    <div *ngIf="hasSummarizedColumns" class="igx-grid__tr" role="row" style="width: calc(100% - 18px)">
+    <div *ngIf="hasSummarizedColumns" class="igx-grid__tr" role="row">
         <ng-container *ngIf="pinnedColumns.length > 0">
             <igx-grid-summary [gridID]="id" *ngFor="let col of pinnedColumns"  [column]="col" [style.min-width.px]="col.width"></igx-grid-summary>
         </ng-container>
@@ -64,6 +64,8 @@
             <igx-grid-summary [gridID]="id" [column]="col" [style.min-width.px]="col.width"></igx-grid-summary>
         </ng-template>
     </div>
-    <ng-container *ngTemplateOutlet="paginationTemplate ? paginationTemplate : defaultPager; context: { $implicit: this }">
-    </ng-container>
+</div>
+<div class="igx-paginator" #paginator>
+<ng-container *ngTemplateOutlet="paginationTemplate ? paginationTemplate : defaultPager; context: { $implicit: this }">
+</ng-container>
 </div>
