1. Add 1fr to grid body 2. Add Grid paginator theme

--- a/src/core/styles/components/grid/_grid-theme.scss
+++ b/src/core/styles/components/grid/_grid-theme.scss
@@ -132,7 +132,7 @@
 
     %grid-display {
         display: grid;
-        grid-template-rows: auto auto auto auto;
+        grid-template-rows: auto 1fr auto auto;
         grid-template-columns: 1fr;
         border-radius: $grid-br;
         box-shadow: $grid-shadow;
