--- a/src/core/styles/themes/_core.scss
+++ b/src/core/styles/themes/_core.scss
@@ -26,6 +26,7 @@
 @import '../components/grid/grid-component';
 @import '../components/grid-filtering/grid-filtering-component';
 @import '../components/grid-summary/grid-summary-component';
+@import '../components/grid-paginator/grid-paginator-component';
 @import '../components/icon/icon-component';
 @import '../components/input/input-component';
 @import '../components/list/list-component';
