--- a/src/grid/grid.component.html
+++ b/src/grid/grid.component.html
@@ -41,14 +41,6 @@
     </ng-template>
 </div>
 
-<div class="igx-grid__scroll" [style.width]='width' [style.height]="'18px'" #scr>
-    <div class="igx-grid__scroll-start" [style.width.px]='pinnedWidth' [hidden]="pinnedWidth === 0"></div>
-    <div class="igx-grid__scroll-main" [style.width.px]='unpinnedWidth'>
-        <ng-template igxFor [igxForOf]='[]' #scrollContainer>
-        </ng-template>
-    </div>
-</div>
-
 <!-- <div *ngIf="hasSummarizedColumns" class="igx-grid__tr" role="row" style="width: calc(100% - 17px)">
     <ng-template igxFor let-col [igxForOf]="visibleColumns" [igxForScrollOrientation]="'horizontal'" [igxForScrollContainer]="parentVirtDir" [igxForContainerSize]='calcWidth' #summaryContainer>
         <igx-grid-summary [gridID]="id" [column]="col" [style.min-width.px]="col.width"></igx-grid-summary>
@@ -65,7 +57,16 @@
         </ng-template>
     </div>
 </div>
-<div class="igx-paginator" #paginator>
+
+<div class="igx-grid__scroll" [style.width]='width' [style.height]="'18px'" #scr>
+    <div class="igx-grid__scroll-start" [style.width.px]='pinnedWidth' [hidden]="pinnedWidth === 0"></div>
+    <div class="igx-grid__scroll-main" [style.width.px]='unpinnedWidth'>
+        <ng-template igxFor [igxForOf]='[]' #scrollContainer>
+        </ng-template>
+    </div>
+</div>
+
+<div class="igx-paginator igx-grid-paginator" #paginator>
 <ng-container *ngTemplateOutlet="paginationTemplate ? paginationTemplate : defaultPager; context: { $implicit: this }">
 </ng-container>
 </div>
